# app/Models/Tenant/Category.php
@@ -17,8 +17,8 @@ use Illuminate\Database\Eloquent\SoftDeletes;
 //use Astrotomic\Translatable\Translatable;
 
 /**
- * App\Models\Product
- * @OA\Schema (schema="_Product")
+ * App\Models\Category
+ * @OA\Schema (schema="_Category")
  */
 
 class Category extends Model
